[tool.poetry]
name = "arch2appimage"
version = "0.1.0"
description = "A Python script to convert any arch linux package (official/AUR) to an AppImage"
authors = ["Hanzala Ibn Zahid"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
inquirer = "2.10.0"
requests = "2.28.1"
rich = "12.5.1"
zstandard = "0.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
